--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
     "morgan": "~1.3.0",
     "pg": "^4.1.1",
     "pg-hstore": "^2.3.2",
-    "sequelize": "^2.0.0-rc4",
+    "sequelize":  ">=4.44.3",
     "serve-favicon": "~2.1.3"
   }
 }
