--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "express-partials": "^0.3.0",
     "express-session": "^1.0.3",
     "method-override": "^2.3.1",
-    "morgan": "~1.3.0",
+    "morgan": ">=1.9.1",
     "pg": "^4.1.1",
     "pg-hstore": "^2.3.2",
     "sequelize":  ">=4.44.3",
