--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "dependencies": {
     "body-parser": "~1.8.1",
     "cookie-parser": "~1.3.3",
-    "debug": "~2.0.0",
+    "debug": ">=2.6.9",
     "ejs": ">=2.5.5",
     "express": "~4.9.0",
     "express-partials": "^0.3.0",
